--- a/style.css
+++ b/style.css
@@ -9,3 +9,125 @@
 
 /* Fill your code*/
 
+#layer1{
+    width: 245px;
+    height: 45px;
+    border-radius: 20px;
+}
+
+#layer2{
+    width: 200px;
+    height: 45px;
+    left: 40px;
+    border-radius: 20px;
+}
+
+#layer3{
+    height: 45px;
+    width: 160px;
+    border-radius: 20px;
+}
+
+#layer4{
+    height: 45px;
+    width: 120px;
+    left: 80px;
+    border-radius:20px;
+}
+
+#layer5{
+    width: 80px;
+    left: 100px;
+    height: 45px;
+    border-radius: 20px;
+}
+
+.header{
+    width:100%;
+    height: 100px;
+    background-color: rgb(128, 0, 0);
+    top:0%;
+}
+
+.container{
+    width:100%;
+    background-color: mediumorchid;
+    height:550px;
+    display: grid;
+    grid-template-columns: 1fr 2fr 1fr;
+    grid-column-gap: 1em;
+}
+.image{
+    position: absolute;
+}
+#img{
+    width:350px;
+    height: 350px;    
+}
+.row{
+    display:flex;
+    flex-direction: column;
+    text-align: center;
+    color: white;
+    font-family: 'Architects Daughter', cursive;
+    font-size: large;
+    font-weight:bolder;
+}
+.col{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.footer{
+    width:100%;
+    height: 100px;
+    background-color: rgb(128, 0, 0);
+    /* bottom: 0%; */
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.logo{
+    position: absolute;
+    border: 5px solid red ;
+    border-radius: 50%;
+    align-content: center;
+    background-color: black;
+    width:300px;
+    height: 200px;
+    text-align: center;
+    top:10px;
+    left: 40%;
+    color: white;
+}
+
+.button{
+    width: fit-content;
+    height: 40px;
+    border-radius: 5px;
+    padding: 0px 10px;
+    background-color: mediumorchid;
+    color: white;
+    font-family: 'Architects Daughter', cursive;
+    font-size: large;
+    font-weight:bolder;
+}
+.button:active {
+    background-color: mediumorchid;
+    box-shadow: 0 5px #666;
+    transform: translateY(4px);
+}
+
+.button.active {
+    width: fit-content;
+    height: 58px;
+    background-color: mediumorchid;
+    /* line-height: 58px; */
+    text-align: center;
+}
+#id{
+    background-color: rgb(144, 252, 3);
+    color: black;
+}
